@@ -1,4 +1,5 @@
 0.09
+ - Add _cleanup() method to overwrite.
 
 0.08 2022-10-29T17:07:43+02:00
  - Add script_js() and script_js_src() methods.
